# haydra_bracu

./: .gitignore  PICK_PLACE_GUIDE.md  README.md  launch_moveit_demo.sh  quickstart.sh
esp32_firmware/: README.md  platformio.ini
esp32_firmware/src/: main.cpp
src/robot_description/: package.xml  setup.py
src/robot_description/launch/: display.launch.py  gazebo.launch.py
src/robot_description/meshes/: base_link.stl  gripper_1.stl  link_1_1.stl  link_2_1.stl  link_3_1.stl
src/robot_description/urdf/: materials.xacro  robot.gazebo  robot.ros2control.xml  robot.xacro
src/robot_moveit_config/: CMakeLists.txt  package.xml
src/robot_moveit_config/config/: joint_limits.yaml  kinematics.yaml  move_group.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  servo_config.yaml  simple_view.rviz
src/robot_moveit_config/launch/: bringup.launch.py  demo.launch.py  mtc_pick_place.launch.py  pick_place_system.launch.py  simple_pick_place.launch.py  teleop_gamepad.launch.py
src/robot_moveit_config/scripts/: fake_trajectory_server.py  gamepad_teleop.py  generate_ikfast.sh  pick_detected_object.py  pick_with_ik.py  real_hardware_teleop.py  robot_ik_solver.py  serial_teleop.py  simple_moveit_pick.py  smooth_teleop.py  test_ik.py
src/robot_moveit_config/src/: mtc_pick_place.cpp  simple_pick_place.cpp
src/robot_moveit_config/srdf/: robot.srdf
src/yolo/: package.xml  run_yolo.py  setup.py
src/yolo/config/: object_3d_detector.yaml  yolo_detector.yaml  yolo_webcam.yaml
src/yolo/launch/: object_3d_detector.launch.py  yolo_detector.launch.py  yolo_webcam.launch.py
src/yolo/yolo/: __init__.py  object_3d_detector_node.py  yolo_detector_node.py  yolo_webcam_node.py
