<?xml version="1.0"?>
<package format="3">
  <name>robot_moveit_config</name>
  <version>0.1.0</version>
  <description>MoveIt 2 configuration for the robot in robot_description.</description>
  <maintainer email="user@example.com">Workspace User</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>moveit_core</depend>
  <depend>moveit_common</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_move_group</depend>
  <depend>moveit_ros_visualization</depend>
  <depend>moveit_planners_ompl</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>pluginlib</depend>
  <depend>tf2_ros</depend>
  <depend>ament_index_python</depend>
  <depend>xacro</depend>
  <depend>rclpy</depend>
  <depend>control_msgs</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>robot_description</exec_depend>

</package>
